--- a/less/agency.less
+++ b/less/agency.less
@@ -29,6 +29,22 @@ p.large {
 	font-size: 16px;
 }
 
+.help-block {
+  margin-top: 4px;
+  background-color: @brand-danger;
+  border-radius: 4px;
+  ul {
+    padding-left: 0;
+  }
+  li {
+    .body-font;
+    list-style: none;
+    margin-left: 20px;
+    padding: 6px 0;
+    color: #fff;
+  }
+}
+
 a,
 a:hover,
 a:focus,
