--- a/css/agency.css
+++ b/css/agency.css
@@ -1,9 +1,3 @@
-/*!
- * Agency v1.0.7 (http://startbootstrap.com/template-overviews/agency)
- * Copyright 2013-2016 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
- */
-
 body {
   overflow-x: hidden;
   font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -191,10 +185,18 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .navbar-toggle:focus {
   background-color: #edd63d;
 }
+.navbar-default .hide-in-mobile {
+  display: none;
+}
+@media (min-width: 992px) {
+  .navbar-default .hide-in-mobile {
+    display: block;
+  }
+}
 .navbar-default .nav li a {
   font-family: "Merriweather Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
-  padding: 15px 10px;
+  padding: 15px 5px;
   font-weight: 400;
   letter-spacing: 1px;
   color: white;
@@ -206,12 +208,12 @@ fieldset[disabled] .btn-xl.active {
 }
 @media (min-width: 992px) {
   .navbar-default .nav li a {
-    padding: 15px 20px;
+    padding: 15px 12px;
   }
 }
 @media (min-width: 1200px) {
   .navbar-default .nav li a {
-    padding: 15px 30px;
+    padding: 15px 24px;
   }
 }
 .navbar-default .navbar-nav > .active > a {
