--- a/less/agency.less
+++ b/less/agency.less
@@ -125,11 +125,21 @@ h1, h2, h3, h4, h5, h6 {
 			background-color: @brand-primary;
 		}
 	}
+
+  .hide-in-mobile {
+    display: none;
+
+    @media(min-width:992px) {
+      display: block;
+    }
+
+  }
+
     .nav {
     	li {
     		a {
     			.heading-font;
-          padding: 15px 10px;
+          padding: 15px 5px;
     			font-weight: 400;
     			letter-spacing: 1px;
     			color: white;
@@ -140,11 +150,11 @@ h1, h2, h3, h4, h5, h6 {
     			}
 
           @media(min-width:992px) {
-            padding: 15px 20px;
+            padding: 15px 12px;
           }
 
           @media(min-width:1200px) {
-            padding: 15px 30px;
+            padding: 15px 24px;
           }
 
     		}
